<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Otra Categoría -->
    <PreferenceCategory>

        <Preference
            android:key="custom_profile"
            android:title="@string/prefernces"
            android:layout="@layout/acc_card"
            android:icon="@drawable/account_24"
            android:background="@drawable/round_button"
            android:summary="@string/sumarry_profile"/>

        <SwitchPreference
            android:key="nightMode"
            android:title="@string/nightmode"
            android:icon="@drawable/outline_nightlight_24"/>

        <SwitchPreference
            android:key="Notifications"
            android:title="@string/notifications"
            android:icon="@drawable/baseline_notifications_none_24" />

        <ListPreference
            android:key="language"
            android:title="@string/language"
            android:summary="%s"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="en"
            android:icon="@drawable/outline_g_translate_24"
            android:layout="@layout/base_pref"/>
    </PreferenceCategory>
</PreferenceScreen>
