<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    style="@style/fondoApp"
    android:theme="@style/Theme.BetMasters"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <FrameLayout
            android:id="@+id/framely_buttons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start|top"
                android:layout_margin="16dp"
                style="@style/iconArrowBack"
                android:elevation="4dp"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/baseline_account_circle_24"
                android:background="@drawable/round_button_big"
                android:layout_marginBottom="16dp"
                android:contentDescription="Foto de Perfil" />

            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="6dp"
                android:contentDescription="Editar Foto"
                style="@style/edit"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18dp"
                android:layout_marginBottom="8dp"/>
            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="345dp"
                android:layout_height="48dp"
                android:inputType="text"
                android:background="@drawable/edittext_background"
                android:layout_marginBottom="16dp"
                style="@style/textInput"
                android:text="John Henry"
                android:paddingStart="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textSize="18dp"
                android:layout_marginBottom="8dp"/>
            <EditText
                android:id="@+id/mailEdit"
                android:layout_width="345dp"
                android:layout_height="48dp"
                android:inputType="text"
                android:background="@drawable/edittext_background"
                android:layout_marginBottom="16dp"
                style="@style/textInput"
                android:text="wahdanalfhat@gmail.com"
                android:paddingStart="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="18dp"
                android:layout_marginBottom="8dp"/>
            <EditText
                android:id="@+id/phoneEdit"
                android:layout_width="345dp"
                android:layout_height="48dp"
                android:inputType="text"
                android:background="@drawable/edittext_background"
                android:layout_marginBottom="16dp"
                style="@style/textInput"
                android:text="+6281221447884"
                android:paddingStart="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18dp"
                android:layout_marginBottom="8dp"/>
            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="345dp"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:background="@drawable/edittext_background"
                android:layout_marginBottom="16dp"
                style="@style/textInput"
                android:text="1234567890"
                android:paddingStart="16dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="345dp"
            android:layout_height="48dp"
            android:textSize="18sp"
            android:background="@drawable/round_button"
            app:backgroundTint="@color/dark_blue"
            android:text="@string/guardar" />
    </LinearLayout>
</ScrollView>
