<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".Main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Coins"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_margin="8dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/ivCoin1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/coin_stamina"
                android:layout_margin="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/txtTimer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08:00:00"
                android:layout_gravity="center"
                android:visibility="visible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/ivCoin2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/coin_stamina"
                android:layout_margin="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/txtTimer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08:00:00"
                android:layout_gravity="center"
                android:visibility="visible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/ivCoin3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/coin_stamina"
                android:layout_margin="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/txtTimer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08:00:00"
                android:layout_gravity="center"
                android:visibility="visible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/ivCoin4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/coin_stamina"
                android:layout_margin="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/txtTimer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08:00:00"
                android:layout_gravity="center"
                android:visibility="visible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/ivCoin5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/coin_stamina"
                android:layout_margin="4dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/txtTimer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08:00:00"
                android:layout_gravity="center"
                android:visibility="visible"/>
        </LinearLayout>


    </LinearLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

    <LinearLayout
        android:id="@+id/games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvGameTrilero"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_matches">

                <ImageView
                    android:id="@+id/ivTrilero"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/trilero"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/txtTrilero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/arrow"
                    app:layout_constraintStart_toEndOf="@id/ivTrilero"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/juego_trilero"
                        android:textSize="20dp"
                        style="@style/textInput"
                        android:fontFamily="@font/roboto_regular"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <ImageView

                            android:src="@drawable/redeem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="50"
                            android:textSize="20dp"
                            style="@style/textInput"
                            android:fontFamily="@font/roboto_regular"/>

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/arrow"
                    android:src="@drawable/arrow_game"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_matches">

                <ImageView
                    android:id="@+id/ivPairGame"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/pairgame"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/txtPair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/arrow2"
                    app:layout_constraintStart_toEndOf="@id/ivPairGame"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/juego_parejas"
                        android:textSize="20dp"
                        style="@style/textInput"
                        android:fontFamily="@font/roboto_regular"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <ImageView

                            android:src="@drawable/redeem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="50"
                            android:textSize="20dp"
                            style="@style/textInput"
                            android:fontFamily="@font/roboto_regular"/>

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/arrow2"
                    android:src="@drawable/arrow_game"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_matches">

                <ImageView
                    android:id="@+id/ivRuleta"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ruleta"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/txtRuleta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/arrow3"
                    app:layout_constraintStart_toEndOf="@id/ivRuleta"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/juego_ruleta"
                        android:textSize="20dp"
                        style="@style/textInput"
                        android:fontFamily="@font/roboto_regular"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <ImageView

                            android:src="@drawable/redeem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="50"
                            android:textSize="20dp"
                            style="@style/textInput"/>

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/arrow3"
                    android:src="@drawable/arrow_game"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
</LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>